--- a/ZBestPC-update/package.json
+++ b/ZBestPC-update/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "css-loader": "^6.7.4",
+    "flexslider": "^2.7.2",
+    "jquery": "^3.7.0",
     "style-loader": "^3.3.3"
   }
 }
