feat: 多入口打包

--- a/ZBestPC-update/package.json
+++ b/ZBestPC-update/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server",
     "build": "webpack"
   },
   "author": "",
@@ -11,7 +12,8 @@
   "devDependencies": {
     "html-webpack-plugin": "^5.5.1",
     "webpack": "^5.83.1",
-    "webpack-cli": "^5.1.1"
+    "webpack-cli": "^5.1.1",
+    "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
     "css-loader": "^6.7.4",
