--- a/ZBestPC-update/package.json
+++ b/ZBestPC-update/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "copy-webpack-plugin": "^11.0.0",
     "html-webpack-plugin": "^5.5.1",
     "webpack": "^5.83.1",
     "webpack-cli": "^5.1.1",
