--- a/ZBestPC-update/package.json
+++ b/ZBestPC-update/package.json
@@ -13,6 +13,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "css-minimizer-webpack-plugin": "^5.0.0",
     "html-webpack-plugin": "^5.5.1",
+    "lodash-es": "^4.17.21",
     "mini-css-extract-plugin": "^2.7.6",
     "terser-webpack-plugin": "^5.3.9",
     "webpack": "^5.83.1",
