--- a/ZBestPC-update/package.json
+++ b/ZBestPC-update/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
     "css-minimizer-webpack-plugin": "^5.0.0",
+    "ejs-loader": "^0.5.0",
     "html-webpack-plugin": "^5.5.1",
     "lodash-es": "^4.17.21",
     "mini-css-extract-plugin": "^2.7.6",
