--- a/ZBestPC-update/package.json
+++ b/ZBestPC-update/package.json
@@ -32,6 +32,7 @@
     "css-loader": "^6.7.4",
     "flexslider": "^2.7.2",
     "jquery": "^3.7.0",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.1"
   }
 }
